Added hyprt-parameter tuning

--- a/HW/HW2/TODO.txt
+++ b/HW/HW2/TODO.txt
@@ -1,5 +1,7 @@
 כתיבת מודל שני משופר
 כוונון היפר-פרמטרים - לשני המודלים
-לבדוק שאנחנו מגיעים ל-70% דיוק על הtestset - רק על הבסיסי
 לייצר גרפים של loss ושל UAS על הtest - לשני המודלים
 כתיבת תוצאות תיוג בצורה של הקורס על קובץ ה-comp - לשני המודלים
+
+בוצע
+לבדוק שאנחנו מגיעים ל-70% דיוק על הtestset - רק על הבסיסי - יצא 88%
