HW2 - update TODO and basic model activation is tanh

--- a/HW/HW2/TODO.txt
+++ b/HW/HW2/TODO.txt
@@ -1,7 +1,8 @@
 כתיבת מודל שני משופר
-כוונון היפר-פרמטרים - לשני המודלים
+כוונון היפר-פרמטרים למודל המתקדם
 לייצר גרפים של loss ושל UAS על הtest - לשני המודלים
 כתיבת תוצאות תיוג בצורה של הקורס על קובץ ה-comp - לשני המודלים
+לוודא שהלוס הוא כמו שצריך
 
 בוצע
 לבדוק שאנחנו מגיעים ל-70% דיוק על הtestset - רק על הבסיסי - יצא 88%
